<resources>
    <string name="app_name">Compress Video</string>
    <string name="first_step_onboarding_text">Bienvenido a \nVideo Compress</string>
    <string name="second_step_onboarding_text">Tu app gratuita para comprimir vídeos</string>
    <string name="third_step_onboarding_text">Adelante, ¡a comprimir!</string>
    <string name="first_step_onboarding_desc">Comprime tus vídeos en tres simples pasos. Primero, selecciona el vídeo que quieras comprimir.</string>
    <string name="second_step_onboarding_desc">Selecciona la calidad deseada (a mayor calidad, menor compresión)</string>
    <string name="third_step_onboarding_desc">Y por último, ¡dale a Comprimir! Eso es todo :)</string>
    <string name="continue_button">Continuar</string>
    <string name="start_button">Comenzar</string>
    <string name="select_video">Selecciona tu vídeo</string>
    <string name="select_video_button">Seleccionar vídeo</string>
    <string name="select_video_desc">Selecciona el vídeo que quieras comprimir pulsando el botón de abajo.</string>
    <string name="select_quality_desc">Ahora, selecciona la calidad que quieras y haz click en el botón de abajo.</string>
    <string name="compress_video">Comprimir vídeo</string>
    <string name="compress_video_button">Comprimir</string>
    <string name="compress_video_desc">Ahora, elige la calidad deseada para tu vídeo. A mayor calidad, menor compresión (y viceversa).</string>
    <string name="super_high_quality">Muy alta</string>
    <string name="high_quality">Alta</string>
    <string name="medium_quality">Media</string>
    <string name="low_quality">Baja</string>
    <string name="super_low_quality">Muy baja</string>
    <string name="current_size">Ahora: %s MB</string>
    <string name="estimated_size">Comprimido: %s MB</string>
    <string name="compression_progress">Progreso: %s %%</string>
    <string name="select_quality">Selecciona la calidad deseada:</string>
    <string name="cancel_compress_dialog_title">Atención</string>
    <string name="cancel_compress_dialog_desc">Si vuelves hacia atrás, cancelarás el proceso actual de compresión. ¿Seguro que quieres cancelarlo?</string>
    <string name="cancel_compress_cancel_back_press_btn">No, sigue comprimiendo</string>
    <string name="cancel_compress_confirm_back_press_btn">Sí, quiero cancelarlo</string>
    <string name="error_while_compressing">No se puede comprimir el vídeo. El formato de vídeo no es compatible.</string>
    <string name="success_compression">¡Vídeo guardado!</string>
    <string name="success_compression_desc">El vídeo se ha guardado en tu galería. ¡Has conseguido ahorrar %s MB!</string>
    <string name="preview">Previsualizar</string>
    <string name="share">Compartir</string>
    <string name="compress_another">Comprimir otro vídeo</string>
    <string name="share_message">Compartir vídeo...</string>
    <string name="loading">Cargando...</string>
    <string name="dont_leave_app">No salgas de la app, por favor...</string>
    <string name="cant_play_video">No se ha podido reproducir. Inténtalo desde tu galería, por favor.</string>
</resources>