<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bold"
        android:lineHeight="45dp"
        android:paddingHorizontal="40dp"
        android:text="@string/compress_video"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/light"
        android:paddingHorizontal="40dp"
        android:text="@string/select_quality_desc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/videoThumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <ImageView
        android:id="@+id/videoThumb"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionText"
        app:layout_constraintBottom_toTopOf="@id/compressOptions"
        tools:background="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/compressOptions"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/white"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/bannerAd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoThumb"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/selectQualityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/select_quality"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                tools:text="Selecciona la calidad deseada:" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/lowQualityButton"
                    style="@style/QualityNotSelectedCardView"
                    android:text="@string/low_quality"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mediumQualityButton"
                    style="@style/QualityNotSelectedCardView"
                    android:text="@string/medium_quality"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/highQualityButton"
                    style="@style/QualitySelectedCardView"
                    android:text="@string/high_quality"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <TextView
                android:id="@+id/currentSizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingHorizontal="20dp"
                android:text="@string/current_size"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:text="Ahora: 10.0 MB" />

            <TextView
                android:id="@+id/estimatedSizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:paddingHorizontal="20dp"
                android:text="@string/estimated_size"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:text="Comprimido: 8.0 Mb (-20%)" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/compressVideoProgressLayout"
                android:layout_width="280dp"
                android:layout_height="80dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/compressVideoProgress"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/regular"
                    android:paddingVertical="14dp"
                    android:translationZ="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent="0.0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/compressVideoButton"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/regular"
                    android:paddingVertical="14dp"
                    android:text="@string/compress_video_button"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:translationZ="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/cancelCompressDialog"
        layout="@layout/cancel_compress_dialog_layout"
        android:visibility="gone" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bannerAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:elevation="21dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4404207177366571/3835426314"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>